--- a/styles/layout/desktop.css
+++ b/styles/layout/desktop.css
@@ -11,54 +11,52 @@ body * {
 }
 
 header {
+  float: right;
   width: 100%;
-  height: 100px;
+  min-height: 100px;
 }
 
 .nav {
   float: left;
-  overflow: hidden;
   height: 724px;
   width: 23%;
 }
 
 #navSection {
-  float: left;
+  clear: right;
   overflow: hidden;
-  width: 75%;
   height: 200px;
-  background-color: white;
+  background-color: black;
 }
 
 .subNav {
   float: left;
   height: 200px;
-  width: 49.75%;
+  width: 49%;
 }
 
 .about {
-  float: left;
+  float: right;
   height: 200px;
-  width: 49.75%;
+  width: 49%;
 }
 
 #content {
-  float: left;
+  clear: right;
   overflow: hidden;
-  width: 75%;
   height: 400px;
-  background-color: white;
+  background-color: black;
 }
 
 .info {
   float: left;
   height: 400px;
-  width: 24.8%;
+  width: 24.5%;
 }
 
 footer {
-  float: left;
+  clear: right;
   /* clear: both; */
   height: 120px;
-  width: 75%;
+  width: 100%;
 }
