have desktop spans centered and indivual boxes a different color. Still need to add 960 breakpoint

--- a/styles/layout/desktop.css
+++ b/styles/layout/desktop.css
@@ -1,6 +1,9 @@
+
+
 body * {
   background-color: rgb(94, 15, 15);
   border: 1px solid black;
+  position: relative;
 }
 
 #container {
@@ -10,16 +13,26 @@ body * {
   overflow: auto;
 }
 
+span{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: honeydew;
+}
+
 header {
   float: right;
   width: 100%;
   min-height: 100px;
+  background-color: green;
 }
 
 .nav {
   float: left;
   height: 724px;
   width: 23%;
+  background-color: brown
 }
 
 #navSection {
@@ -33,12 +46,14 @@ header {
   float: left;
   height: 200px;
   width: 49%;
+  background-color: aqua
 }
 
 .about {
   float: right;
   height: 200px;
   width: 49%;
+  background-color: yellow;
 }
 
 #content {
@@ -52,6 +67,7 @@ header {
   float: left;
   height: 400px;
   width: 24.5%;
+  background-color: red;
 }
 
 footer {
@@ -59,4 +75,5 @@ footer {
   /* clear: both; */
   height: 120px;
   width: 100%;
+  background-color: goldenrod;
 }
