--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,2 +1,3 @@
-@import url('./layout/mobile.css') (min-width: 479px) and (max-width: 767px);
-@import url('./layout/desktop.css') (min-width: 768px);
+@import url('./layout/mobile.css') (max-width: 767px);
+@import url('./layout/desktop.css') (min-width: 768px) and (max-width: 960px);
+@import url('./layout/largeDesktop.css') (min-width: 961px);
